@@ -16,11 +16,6 @@
   </li>
   <li><p><strong>There is no 3-way merge.</strong></p></li>
   <li>
-    <p><strong>Shell Extension does now work in 64-bit Windows</strong></p>
-    <p>64-bit Windows versions cannot load WinMerge's Shell Extension. There is limitation in 64-bit Windows that 64-bit code cannot load 32-bit DLLs. Naturally Shell in 64-bit Windows is 64-bit code. And WinMerge Shell Extension is 32-bit DLL.</p>
-    <p><i>Workaround</i>: There is no workaround. This will be fixed when 64-bit version from Shell Extension is released. There are no plans for that yet.</p>
-  </li>
-  <li>
     <p><strong>$ does not match end of line in linefilter regular expressions</strong></p>
     <p><i>Workaround</i>: Construct your regular expression so that you don't need to use $.</p>
   </li>
